--- a/products.html
+++ b/products.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles/products.css">
 </head>
 <body>
+    <header>
+        <h1><img src="/imagenes/productBarber/logo.png" alt="Logo de la barberia"></h1>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/products.html">Productos</a></li>
+                <li><a href="/contact.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
