--- a/products.html
+++ b/products.html
@@ -5,18 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product-Barber</title>
     <link rel="stylesheet" href="styles/products.css">
+    <link rel="stylesheet" href="/styles/reset.css">
 </head>
 <body>
     <header>
-        <h1><img src="/imagenes/productBarber/logo.png" alt="Logo de la barberia"></h1>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/products.html">Productos</a></li>
-                <li><a href="/contact.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <div class="caja">
+            <h1><img src="/imagenes/productBarber/logo.png" alt="Logo de la barberia"></h1>
+            <nav>
+                <ul>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/products.html">Productos</a></li>
+                    <li><a href="/contact.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+    <main>
+        <ul class="productos">
+            <li>
+                <h1>Cabello</h1>
+                <img src="/imagenes/productBarber/cabello.jpg" alt="imagen del cabello">
+                <p class="producto-descripcion">Con tijera o maquina, a gusto del cliente.</p>
+                <p class="precio">$10.00</p>
+            </li>
+            <li>
+                <h1>Barba</h1>
+                <img src="/imagenes/productBarber/barba.jpg" alt="imagen del barba">
+                <p class="producto-descripcion">Corte y diseño profecional de barba.</p>
+                <p class="precio">$08.00</p>
+            </li>
+            <li>
+                <h1>Cabello + Barba</h1>
+                <img src="/imagenes/productBarber/cabello+barba.jpg" alt="imagen del cabello mas barba">
+                <p class="producto-descripcion">Paquete completo de cabello y barba.</p>
+                <p class="precio">$15.00</p>
+            </li>
+        </ul>
+    </main>
+    <footer>
+        <img src="/imagenes/productBarber/logo-blanco.png" alt="">
+        <p class="copyright">&copy Copyright Barberia Alura 2024</p>
+    </footer>
     
 </body>
 </html>
