--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barberia</title>
-    <link rel="stylesheet" href="/styles/products.css">
-    <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/reset.css">
-</head>
+    <link rel="stylesheet" href="/styles/style.css">
+    <!-- <link rel="stylesheet" href="/styles/style-home.css"> -->
+    
+</head> 
 <body>
     <header>
         <div class="caja">
@@ -22,30 +23,32 @@
         </div>
     </header>
     <img id="banner" src="/imagenes/banner/banner.jpg" alt="Imagen de barberia">
-   <div class="principal">
-        <h2 class="tituloCentrado">
-            Sobre la Barbería Alura
-        </h2>
-        <p>
-            Ubicada en el corazón de la ciudad, la <strong> Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
-        </p>
-        <p id="mision">
-            <em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes".</strong></em>
-        </p>
-        <p>
-            Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.   
-        </p>
-   </div>
-    <div class="diferencial">
-        <h3 class="tituloCentrado">Diferenciales</h3>
-        <ul class="diferencialUl">
-            <li class="item">Atencion personalizada a los clientes.</li>
-            <li class="item">Espacio diferencial.</li>
-            <li class="item">Localizacion.</li>
-            <li class="item">Profecionales calificados.</li>
-        </ul>
-        <img class="imgDiferencial" src="/imagenes/diferenciales/diferenciales.jpg">
-    </div>
+   <main>
+        <section class="principal">
+            <h2 class="tituloCentrado">
+                Sobre la Barbería Alura
+            </h2>
+            <p>
+                Ubicada en el corazón de la ciudad, la <strong> Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
+            </p>
+            <p id="mision">
+                <em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes".</strong></em>
+            </p>
+            <p>
+                Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.   
+            </p>
+        </section>
+        <section class="diferencial">
+            <h3 class="tituloCentrado">Diferenciales</h3>
+            <ul class="diferencialUl">
+                <li class="item">Atencion personalizada a los clientes.</li>
+                <li class="item">Espacio diferencial.</li>
+                <li class="item">Localizacion.</li>
+                <li class="item">Profecionales calificados.</li>
+            </ul>
+            <img class="imgDiferencial" src="/imagenes/diferenciales/diferenciales.jpg">
+        </section>
+    </main>
     <footer>
         <img src="/imagenes/productBarber/logo-blanco.png" alt="">
         <p class="copyright">&copy Copyright Barberia Alura 2024</p>
