--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Barberia</title>
     <link rel="stylesheet" href="/styles/reset.css">
     <link rel="stylesheet" href="/styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+
+
     <!-- <link rel="stylesheet" href="/styles/style-home.css"> -->
     
 </head> 
@@ -22,12 +25,13 @@
             </nav>
         </div>
     </header>
-    <img id="banner" src="/imagenes/banner/banner.jpg" alt="Imagen de barberia">
+    <img class="banner" src="/imagenes/banner/banner.jpg" alt="Imagen de barberia">
    <main>
         <section class="principal">
-            <h2 class="tituloCentrado">
+            <h2 class="titulo-principal">
                 Sobre la Barbería Alura
             </h2>
+            <img class="utensilios" src="/imagenes/diferenciales/utensilios.jpg" alt="Imagen sobre utensilios">
             <p>
                 Ubicada en el corazón de la ciudad, la <strong> Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
             </p>
@@ -38,16 +42,30 @@
                 Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.   
             </p>
         </section>
-        <section class="diferencial">
-            <h3 class="tituloCentrado">Diferenciales</h3>
-            <ul class="diferencialUl">
-                <li class="item">Atencion personalizada a los clientes.</li>
-                <li class="item">Espacio diferencial.</li>
-                <li class="item">Localizacion.</li>
-                <li class="item">Profecionales calificados.</li>
-            </ul>
-            <img class="imgDiferencial" src="/imagenes/diferenciales/diferenciales.jpg">
+        <section class="mapa">
+            <h3 class="titulo-principal">Nuestra ubicacion</h3>
+            <p>Nuestro establecimiento esta ubicado en el corazón de la ciudad</p>
+            <div class="mapa-contenido">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3113.098913090624!2d-62.26885662462964!3d-38.71553798611167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95edbd44578df72f%3A0x28119a53279f30eb!2sBarberia%20Alura%20Bah%C3%ADa!5e0!3m2!1ses-419!2sar!4v1706879783333!5m2!1ses-419!2sar" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </section>
+        <section class="diferencial">
+            <h3 class="titulo-principal">Diferenciales</h3>
+            <div class="contenido-diferencial">
+                <ul class="lista-diferencial">
+                    <li class="item">Atencion personalizada a los clientes.</li>
+                    <li class="item">Espacio diferencial.</li>
+                    <li class="item">Localizacion.</li>
+                    <li class="item">Profecionales calificados.</li>
+                    <li class="item">Puntualidad.</li>
+                    <li class="item">Limpieza.</li>
+                </ul><img class="img-diferencial" src="/imagenes/diferenciales/diferenciales.jpg">    
+            </div>
+            <div class="video">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=zttOSEKN4MmwPeGQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </section>
+        
     </main>
     <footer>
         <img src="/imagenes/productBarber/logo-blanco.png" alt="">
