Modify the product file and center the li tags.

--- a/products.html
+++ b/products.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product-Barber</title>
-    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">   
 </head>
 <body>
     <header>
@@ -35,7 +36,7 @@
                 <p class="precio">$08.00</p>
             </li>
             <li>
-                <h1>Cabello + Barba</h1>
+                <h1>Cabello+Barba</h1>
                 <img src="/imagenes/productBarber/cabello+barba.jpg" alt="imagen del cabello mas barba">
                 <p class="producto-descripcion">Paquete completo de cabello y barba.</p>
                 <p class="precio">$15.00</p>
