The contact file and the style were modified.

--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
 
-    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -21,7 +22,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class="main-contact">
         <form action="">
             <label for="nombreapellido">Nombre y Apellido</label>
             <input type="text" id="nombreapellido" class="input-padron" required placeholder=" Martin Peréz">
