making the contact page responsive

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,9 @@
             </nav>
         </div>
     </header>
+
     <main class="main-contact">
+        <h1>Complete el formulario</h1>
         <form action="">
             <label for="nombreapellido">Nombre y Apellido</label>
             <input type="text" id="nombreapellido" class="input-padron" required placeholder=" Martin Peréz">
@@ -47,9 +49,9 @@
                 <label for="radio-Whatsapp"><input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp" checked>WhatsApp</label>
                 
             </fieldset>
-            <fieldset>
+            <fieldset  class="turno">
                 <legend>¿En que horario desea ser atendido?</legend>
-                <select name="" id="">
+                <select name="">
                     <option value="">Mañana</option>
                     <option value="">Tarde</option>
                     <option value="">Noche</option>
