--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barberia</title>
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
 
@@ -15,23 +15,23 @@
 <body>
     <header>
         <div class="caja">
-            <h1><img src="/imagenes/productBarber/logo.png" alt="Logo de la barberia"></h1>
+            <h1><img src="imagenes/productBarber/logo.png" alt="Logo de la barberia"></h1>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/products.html">Productos</a></li>
-                    <li><a href="/contact.html">Contacto</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Productos</a></li>
+                    <li><a href="contact.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <img class="banner" src="/imagenes/banner/banner.jpg" alt="Imagen de barberia">
+    <img class="banner" src="imagenes/banner/banner.jpg" alt="Imagen de barberia">
    <main>
         <section class="principal">
             <h2 class="titulo-principal">
                 Sobre la Barbería Alura
             </h2>
-            <img class="utensilios" src="/imagenes/diferenciales/utensilios.jpg" alt="Imagen sobre utensilios">
+            <img class="utensilios" src="imagenes/diferenciales/utensilios.jpg" alt="Imagen sobre utensilios">
             <p>
                 Ubicada en el corazón de la ciudad, la <strong> Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
             </p>
@@ -59,7 +59,7 @@
                     <li class="item">Profecionales calificados.</li>
                     <li class="item">Puntualidad.</li>
                     <li class="item">Limpieza.</li>
-                </ul><img class="img-diferencial" src="/imagenes/diferenciales/diferenciales.jpg">    
+                </ul><img class="img-diferencial" src="imagenes/diferenciales/diferenciales.jpg">    
             </div>
             <div class="video">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=zttOSEKN4MmwPeGQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
