--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
 
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="caja">
-            <h1><img src="/imagenes/productBarber/logo.png" alt="Logo de la barberia"></h1>
+            <h1><img src="imagenes/productBarber/logo.png" alt="Logo de la barberia"></h1>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/products.html">Productos</a></li>
-                    <li><a href="/contact.html">Contacto</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Productos</a></li>
+                    <li><a href="contact.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -89,7 +89,7 @@
     </main>
 
     <footer>
-        <img src="/imagenes/productBarber/logo-blanco.png" alt="">
+        <img src="imagenes/productBarber/logo-blanco.png" alt="">
         <p class="copyright">&copy Copyright Barberia Alura 2024</p>
     </footer>
 </body>
