--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
    <main>
         <section class="principal">
             <h2 class="titulo-principal">
-                Sobre la Barbería Alura
+                Sobre Barbería Alura
             </h2>
             <img class="utensilios" src="imagenes/diferenciales/utensilios.jpg" alt="Imagen sobre utensilios">
             <p>
-                Ubicada en el corazón de la ciudad, la <strong> Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
+                Ubicada en el corazón de la ciudad, la <strong> Barbería Alura</strong> trae lo mejor del mercado para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
             </p>
             <p id="mision">
                 <em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes".</strong></em>
             </p>
             <p>
-                Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.   
+                Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. Nuestra atencion es sinónimo de excelencia, garantizando calidad para satisfacción de nuestros clientes.   
             </p>
         </section>
         <section class="mapa">
