--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     </header>
 
     <main class="main-contact">
-        <h1>Complete el formulario</h1>
+        <h1 class="tutulo-contact">Complete el formulario</h1>
         <form action="">
             <label for="nombreapellido">Nombre y Apellido</label>
             <input type="text" id="nombreapellido" class="input-padron" required placeholder=" Martin Peréz">
