--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
             <h3 class="titulo-principal">Nuestra ubicacion</h3>
             <p>Nuestro establecimiento esta ubicado en el corazón de la ciudad</p>
             <div class="mapa-contenido">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3113.098913090624!2d-62.26885662462964!3d-38.71553798611167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95edbd44578df72f%3A0x28119a53279f30eb!2sBarberia%20Alura%20Bah%C3%ADa!5e0!3m2!1ses-419!2sar!4v1706879783333!5m2!1ses-419!2sar" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3113.098913090624!2d-62.26885662462964!3d-38.71553798611167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95edbd44578df72f%3A0x28119a53279f30eb!2sBarberia%20Alura%20Bah%C3%ADa!5e0!3m2!1ses-419!2sar!4v1706879783333!5m2!1ses-419!2sar" 
+                width="100%" 
+                height="300" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
             </div>
         </section>
         <section class="diferencial">
@@ -59,7 +67,14 @@
                 </ul><img class="img-diferencial" src="imagenes/diferenciales/diferenciales.jpg">    
             </div>
             <div class="video">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=zttOSEKN4MmwPeGQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="100%"
+                 height="315" 
+                 src="https://www.youtube.com/embed/wcVVXUV0YUY?si=zttOSEKN4MmwPeGQ" 
+                 title="YouTube video player" 
+                 frameborder="0" 
+                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                 allowfullscreen>
+                </iframe>
             </div>
         </section>
         
